OW-2056 fix ok/cancel buttons alignment
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@48254 fb2e276d-fae9-0310-b578-b71ac85840b9

--- a/checkout/src/scss/checkout/_EnrolmentItem.scss
+++ b/checkout/src/scss/checkout/_EnrolmentItem.scss
@@ -174,6 +174,8 @@
         display: flex;
         align-items: baseline;
         margin-bottom: 10px;
+        display: -ms-flexbox;
+        -ms-flex-align: center;
         
         input, button {
           float: none;
